feat: Update index.html for Cartridge Icon Generator with new metadata and favicon

--- a/index.html
+++ b/index.html
@@ -3,22 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Emulation Frontend</title>
-    <meta name="description" content="Emulation Frontend - A minimal webapp template with animated dot grid background" />
+    <title>Cartridge Icon Generator - Create Custom Game Icons</title>
+    <meta name="description" content="Generate stunning retro game cartridge icons for your game library. Customize colors, add artwork, and download high-quality 1024x1024 icons for NES, SNES, Genesis, and more." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="author" content="Lovable" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <meta name="author" content="Cartridge Icon Generator" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:title" content="Cartridge Icon Generator - Create Custom Game Icons" />
+    <meta property="og:description" content="Generate stunning retro game cartridge icons for your game library with customizable colors and artwork." />
+    <meta property="og:image" content="/og-image.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Cartridge Icon Generator - Create Custom Game Icons" />
+    <meta name="twitter:description" content="Generate stunning retro game cartridge icons for your game library with customizable colors and artwork." />
+    <meta name="twitter:image" content="/og-image.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#8b5cf6" />
   </head>
 
   <body>
